Updated desktop file and README.md

--- a/Hyperspace.desktop
+++ b/Hyperspace.desktop
@@ -3,7 +3,7 @@ Type=Application
 Version=1.0
 Encoding=UTF-8
 Name=FTL Hyperspace
-Comment=The FTL Hyperspace framework
+Comment=The FTL Hyperspace executable
 Exec=/usr/bin/wine ./FTLGame.exe
 Icon=./ftl.png
 Terminal=false
